--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@commonninja/prettier-config": "^1.0.5",
     "@types/express": "^5.0.1",
     "@types/lodash": "^4.17.16",
     "@types/node": "^22.14.0",
